introduce content holes

--- a/front/preface.tex
+++ b/front/preface.tex
@@ -84,3 +84,12 @@ W.\ Burger (em.) and W.\ Hochleitner\\[1ex]
 University of Applied Sciences Upper Austria\\ 
 Department of Digital Media, Hagenberg\\
 \url{https://www.fh-ooe.at/campus-hagenberg/}
+
+
+
+\todo{Integrate the next paragraph.}
+Another motivational factor for making comments executable is the author's involvement in the StateML\footnote{\url{https://www.stateml.org/}} project, which aims at providing a shared visual language for modeling event-driven behavior based on Statecharts \cite{Harel:1987}.
+This multi-modal (visual, textual, $\dotsc$) language enables the cooperative definition and development of behavior by providing live-visualizations for non-developers.
+StateML artifacts can be simulated, but the language itself is not executable, it must be embedded in a host programming language which executes all side effects.
+To fully utilize the potential of Statecharts and improve stakeholder collaboration in agile and incremental software development processes, it is necessary to partially execute those models of behavior.
+% During simulation mode, hole-driven comments can act as simulated side-effects while providing the base for future implementation via their textual description.
