--- a/main.tex
+++ b/main.tex
@@ -20,15 +20,18 @@
 
 \graphicspath{{images/}}  % Location of images and graphics
 \logofile{logo}           % Logo file: images/logo.pdf (no logo: \logofile{})
-\bibliography{references} % BibLaTeX bibliography file (references.bib)
+%\bibliography{references} % BibLaTeX bibliography file (references.bib)
+\bibliography{bibliography} % BibLaTeX bibliography file (references.bib)
 
 %%%------------------------------ custom packages ------------------------------
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{epigraph}
+\usepackage{svg}
 %%%-----------------------------------------------------------------------------
 
 \newcommand{\addref}{\todo[color=red!40]{Add reference.}}
 \newcommand{\estimatedpagecount}[1]{\todo[color=blue!40]{Estimated Pages: #1}}
+\newcommand{\CS}{C\nolinebreak\hspace{-.05em}\raisebox{.6ex}{\scriptsize\bf \#}}
 
 %%%-----------------------------------------------------------------------------
 \begin{document}
@@ -64,7 +67,7 @@
 
 \listoftodos
 
-\include{front/preface} % A preface is optional
+%\include{front/preface} % A preface is optional
 \include{front/abstract}
 \include{front/kurzfassung}
 
@@ -73,129 +76,13 @@
 %%%-----------------------------------------------------------------------------
 
 \include{chapters/introduction}
+\include{chapters/related-work}
+\include{chapters/implementation}
+\include{chapters/summary}
 
-\chapter{Related Work (15)}
-\epigraph{We should think of the compiler as being our lab assistant.}{Edwin Brady}
-\section{Tackling Todo-Comments (4)}
-\subsection{PEP-350 Codetags}
-- \url{https://medium.com/hackernoon/never-forget-anything-before-after-and-while-coding-98d187ae4cf1#.czqio0b4x}
-\subsection{TrigIt}
-\subsection{TODO: other Todo-Platforms}
-\section{Languages with native Holes support (6)}
-\todo[inline]{make sure that those are sorted by invention date}
-\subsection{Coq}
-\subsection{Agda}
-\subsection{Hazel}
-https://www.youtube.com/watch?v=UkDSL0U9ndQ
-the gap problem
-what you start with is a hole
-what should we fill this hole with (in-class)
-regarding machine learning: having a theory of incomplete programs allows us to do it this way
-splicing: putting holes inside text
-\subsection{Haskell}
-\todo{maybe do some research regarding Liquid Haskell}
-\subsection{Idris}
-\section{Simulating Holes in other Languages (5)}
-\subsection{C\#}
-- NotImplementedException
-- dynamic
-\subsection{Java}
-\todo{do some research on this}
-\subsection{Scala}
-- ???
-\subsection{Swift}
-\todo{do some research on this}
-\subsection{Rust}
-- !todo
-- !unimplemented
-\subsection{TypeScript}
-- mention that the difference here is that we apply Holes at the type level
-- any \& unknown + eslint
-- talk about gradual refinement
-\subsection{\LaTeX}
-\todo{explain how todo comments can be used while writing a \LaTeX document}
-- https://ctan.org/pkg/todonotes \todo{Highlight the comments on ctan of how useful todos are when collaborating on a document}
-- https://ctan.org/pkg/easy-todo
-- https://ctan.org/pkg/fixmetodonotes
-- https://ctan.org/pkg/todo
-- https://ctan.org/pkg/fixme
-  - \#Controlling the behavior of FiXme shows the idea of Release/Debug mode
-\section{Properties of Holes}
 
-new Hole("test", new {  }).Effect(() => test);
+% new Hole("test", new {  }).Effect(() => test);
 
-\chapter{Implementation (20)}
-\epigraph{What runs, the code or the comments?}{Brian Kernighan}
-- using idiomatic C\#, so that legacy projects can be supported + path to this decision
-\section{Types of Holes}
-\subsection{Todo-Comment}
-\subsection{Hole-Comment}
-\subsection{Missing Implementation}
-- https://softwareengineering.stackexchange.com/a/323503
-\subsection{Side-Effect}
-\section{Architecture (2)}
-\subsection{Architecture Overview}
-- maybe include a C4-Diagram of the packages
-\subsection{Bridging static Contexts and DI}
-\subsection{Supporting Logging}
-\subsection{Language Independence}
-\todo{mention what is needed for other languages to adopt holes}
-\section{Providing IDE Support}
-\subsection{Analyzers (3)}
-- how analyzers work, and in-depth description of implemented analyzers
-- debug vs. release
-- TreatWarningsAsErrors
-- vs linting
-\subsection{Code Fixes}
-- testing Code Fixes + Analyzers
-\section{Bridging Compile- and Runtime}
-\subsection{Stacktraces}
-\subsection{Compiler Generated Attributes}
-- mention downside of having to specify generics when using strings
-\subsection{Source Generators}
-- source generators
-- run-time vs. compile-time + stacktrace vs. [Attributes]
-- lifting compile time information to runtime information
-\section{static contexts + DI}
-\section{Supporting Logging + Reporting}
-\section{Extensibility}
-\subsection{Reporting}
-\subsection{Mocking}
-\todo{Abstract I/O}
-\todo{Reference the Sidecar Application}
-\subsection{Sidecar Application}
-\subsubsection{Communication}
-\subsubsection{Dynamic Form Generation}
-
-\chapter{Summary (7)}
-\epigraph{Isn't that reverse hot-reloading?}{Stefan Baumgartner}
-\section{Discussion}
-\section{Contributions}
-- new way of interacting with programs: reverse hot-reloading
-- tightening the feedback loop
-- applying HDD to general purpose PLs
-\section{Applications}
-- educational setting
-- company setting (like described by Angie)
-- dev2dev communication
-- pontential customer involvement
-\section{Limitations}
-- vs. Test-Driven Development (\todo{Papa sein Input dazu finden und anwenden})
-- vs. Linting
-\section{Future Ideas}
-- vueflow like Angie described
-- CodeLLMs
-- additional languages
-- Sidecar with multiple applications
-\section{Future Work}
-\subsection{Ideas}
-- LLMs
-- Record and Replay
-- Language
-\subsection{Research}
-- qualitative research regarding usability and applicability
-- additional languages
-- applicability in Data Science
 
 %\include{chapters/thethesis}
 %\include{chapters/latex}
@@ -209,10 +96,10 @@ new Hole("test", new {  }).Effect(() => test);
 \appendix                                                             % Appendix
 %%%-----------------------------------------------------------------------------
 
-\include{back/appendix_a} % Technical supplements
-\include{back/appendix_b} % Contents for electronic submission
-\include{back/appendix_c} % Included other PDF document
-\include{back/appendix_d} % Source text of this document
+%\include{back/appendix_a} % Technical supplements
+%\include{back/appendix_b} % Contents for electronic submission
+%\include{back/appendix_c} % Included other PDF document
+%\include{back/appendix_d} % Source text of this document
 
 %%%-----------------------------------------------------------------------------
 \backmatter                           % Back part (bibliography, glossary, etc.)
