Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,261 @@
 
+@misc{funke_complex_2012,
+	address = {Rochester, NY},
+	type = {{SSRN} {Scholarly} {Paper}},
+	title = {Complex {Problem} {Solving}},
+	url = {https://papers.ssrn.com/abstract=2233373},
+	abstract = {Complex problem solving takes place for reducing the barrier between a given start state and an intended goal state with the help of cognitive activities and behavior. Start state, intended goal state, and barriers prove complexity, change dynamically over time, and can be partially intransparent. In contrast to solving simple problems, with complex problems at the beginning of a problem solution the exact features of the start state, of the intended goal state, and of the barriers are unknown. Complex problem solving expects the efficient interaction between the problem-solving person and situational conditions that depend on the task. It demands the use of cognitive, emotional, and social resources as well as knowledge (see Frensch and Funke 1995).},
+	language = {en},
+	urldate = {2023-11-02},
+	author = {Funke, Joachim},
+	month = mar,
+	year = {2012},
+	keywords = {complex problem solving, definition, review},
+}
+
+@misc{mourzenko_answer_2014,
+	title = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?"},
+	shorttitle = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?},
+	url = {https://softwareengineering.stackexchange.com/a/253577},
+	urldate = {2023-10-30},
+	journal = {Software Engineering Stack Exchange},
+	author = {Mourzenko, Arseni},
+	month = aug,
+	year = {2014},
+}
+
+@misc{jones_answer_2011,
+	title = {Answer to "{Is} {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?"},
+	shorttitle = {Answer to "{Is} {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?},
+	url = {https://cs.stackexchange.com/a/2645},
+	urldate = {2023-11-01},
+	journal = {Computer Science Stack Exchange},
+	author = {Jones, Kyle},
+	month = dec,
+	year = {2011},
+}
+
+@book{simon_administrative_1957,
+	address = {New York},
+	edition = {2d ed., with new introd.},
+	title = {Administrative {Behavior}: {A} {Study} of {Decision}-{Making} {Processes} in {Administrative} {Organization}.},
+	shorttitle = {Administrative {Behavior}},
+	language = {eng},
+	publisher = {Macmillan},
+	author = {Simon, Herbert Alexander},
+	year = {1957},
+	note = {Open Library ID: OL6220775M},
+	keywords = {Management.},
+}
+
+@inproceedings{taheri_evaluating_2015,
+	title = {Evaluating the {Effectiveness} of {Problem} {Solving} {Techniques} and {Tools} in {Programming}},
+	url = {https://ieeexplore.ieee.org/abstract/document/7237253?casa_token=6clOt0X0RlgAAAAA:mTZ2ILtUheG3xVWlWfQrrmC3FQiwQWJ4_tJryyCZiggmzO1U9bXu_FWUc6aSMNPwoQQxeIkZmA},
+	doi = {10.1109/SAI.2015.7237253},
+	abstract = {Programming is one of the essential and most difficult skills to learn in the computer field and other disciplines. Programming can seem more troublesome for novices who have not learned programming concepts, usage and other basic programming skills. To become a programmer, there are many things need to be considered in programming such as syntax, pragmatics and semantics. In addition, having a good knowledge about problem-solving techniques is vital. For instance, when some students face a new problem in programming courses and they feel understanding the problem is not easy, difficult tasks which students need to handle as well as, the manner of teaching programming may discourage them to do coding. Mostly, in the first phase of learning programming, they find it difficult, and they will not be inspired to do programming; this is one of the reasons that most students cannot do coding by themselves. An environment in which is a source and guidance to look for commands and explanations would be helpful, and interaction with teachers or friends can assist in overcoming most of the difficulties. This research aims to study about the effectiveness of learning the fundamental of problem solving in programming, as well as, learning these abilities in the early ages. This paper introduces and compares several existing problem-solving tools and shows how visual problem-solving techniques will help students to improve their programming skills. Furthermore, in this paper we analyze the experience of programming, problem solving tools and techniques and the role of social networks in programming based on gathered data which was collected through an online survey.},
+	urldate = {2023-10-31},
+	booktitle = {2015 {Science} and {Information} {Conference} ({SAI})},
+	author = {Taheri, Seyyed Meisam and Sasaki, Minoru and Ngetha, Harrison Thuku},
+	month = jul,
+	year = {2015},
+	pages = {928--932},
+}
+
+@inproceedings{robertson_role_2008,
+	title = {The {Role} of {Software} {Tools} in {Influencing} {Creative} {Problem} {Solving} in {Engineering} {Design} and {Education}},
+	url = {https://dx.doi.org/10.1115/DETC2006-99343},
+	doi = {10.1115/DETC2006-99343},
+	abstract = {Creativity is increasingly recognised as an essential component of engineering design. This paper describes an exploratory study into the nature and importance of creativity in engineering design problem solving in relation to the possible impact of software design tools. The first stage of the study involved an empirical investigation in the form of a case study of the use of standard CAD tool sets and the development of a systems engineering software support tool. It was found that there were several ways in which CAD influenced the creative process, including enhancing visualisation and communication, premature fixation, circumscribed thinking and bounded ideation. The tool development experience uncovered the difficulty in supporting creative processes from the developer’s perspective. The issues were the necessity of making assumptions, achieving a balance between structure and flexibility, and the pitfalls of satisfying user wants and needs. The second part of the study involved the development of a model of the creative problem solving process in engineering design. This provided a possible explanation for why purpose designed engineering software tools might encourage an analytical problem solving approach and discourage a more creative approach.},
+	language = {en},
+	urldate = {2023-10-31},
+	publisher = {American Society of Mechanical Engineers Digital Collection},
+	author = {Robertson, Brett and Radcliffe, David},
+	month = jun,
+	year = {2008},
+	pages = {999--1007},
+}
+
+@inproceedings{wingo_using_2015,
+	title = {Using an {Agile} {Software} {Development} {Methodology} for a {Complex} {Problem} {Domain}},
+	url = {https://ieeexplore.ieee.org/abstract/document/7132890?casa_token=EhUZQupy8EQAAAAA:9Q_j3tijhy2oZxyIC5xohRkv6fQdCXvNR3o-p6waGNmEGZF4JdMXrS251a-L0JtNKysqeuIj6w},
+	doi = {10.1109/SECON.2015.7132890},
+	abstract = {Software development for complex problem domains is a difficult undertaking with challenges to successful outcomes. Complex problem domains exhibit volatility, interactions, and unpredictability that place high demands on the creation of a software solution. For this type of problem, the process used to create the software solution, in addition to meeting the goal of the solution, needs to produce a solution that can handle the effects of complexity in the problem domain. This paper examines forces that a complex problem domain places on the development of a software solution and how the software development process can affect the software product in relation to those forces. It focuses on how the practices of an agile software development methodology, in particular the Extreme Programming Methodology, embraces change and has practices that implicitly affect the design and implementation to meet the needs of software solutions for complex problem domains.},
+	urldate = {2023-10-31},
+	booktitle = {{SoutheastCon} 2015},
+	author = {Wingo, R. Steven and Tanik, Murat M.},
+	month = apr,
+	year = {2015},
+	note = {ISSN: 1558-058X},
+	pages = {1--8},
+}
+
+@inproceedings{gibson_software_2005,
+	address = {New York, NY, USA},
+	series = {{ICER} '05},
+	title = {Software engineering as a model of understanding for learning and problem solving},
+	isbn = {978-1-59593-043-9},
+	url = {https://dl.acm.org/doi/10.1145/1089786.1089795},
+	doi = {10.1145/1089786.1089795},
+	abstract = {This paper proposes a model which explains the process of learning about computation in terms of well-accepted software engineering concepts, and argues that our approach to understanding how problem-solving skills are acquired is an innovation over well-accepted learning theories and models. It examines how it all students make sense of computational processes; by reporting on experimental observations that have been made with school children, and with university undergraduates. We observed little difference between children and adults with regard to how they learn about computation, and suggest that the strong similarities are due to a common set of problem-solving techniques which are fundamental to all problem based learning, in general, and learning about computation, in particular. To conclude, we demonstrate that our model --- based on software engineering concepts --- is useful when reasoning about the relationship between problem solving and learning to program.},
+	urldate = {2023-10-31},
+	booktitle = {Proceedings of the first international workshop on {Computing} education research},
+	publisher = {Association for Computing Machinery},
+	author = {Gibson, J. Paul and O'Kelly, Jackie},
+	month = oct,
+	year = {2005},
+	keywords = {computing education research},
+	pages = {87--97},
+}
+
+@inproceedings{lawan_what_2019,
+	title = {What is {Difficult} in {Learning} {Programming} {Language} {Based} on {Problem}-{Solving} {Skills}?},
+	url = {https://ieeexplore.ieee.org/abstract/document/8723740?casa_token=NOhWuUrChiAAAAAA:zmoQcb2HF_RBzTanCzDwNjpY9rUPQVxtNH5a4Td4ITpo6hIloUwWbiOtAV_A2q1tW4nhZdDCUw},
+	doi = {10.1109/ICOASE.2019.8723740},
+	abstract = {Problem-solving skills are paramount to university students while learning programming languages. Many researchers have identified a lack of problem-solving skills among university students across various disciplines, but little is known on how certain subjects could ease the acquisition of these skills and vice versa. Educational researchers should focus on exploring the role problem-solving skills could play in preparing students toward standard approaches to learning programming languages. This paper provides an understanding of the difficulties faced by university students while learning programming language using problem-solving skills. The questionnaire used in the study has 32 items categorized into four dimensions of Analysis, Design, Coding and Testing. Data were collected randomly from 113 voluntary participants from Information Technology and Engineering Departments of Near East University, Cyprus. Statistical analysis applied to the data revealed a significant correlation between all the dimensions and existence of a level of difficulties above average on all the dimensions. This research will augment related literary findings and help academicians situate the best practices in teaching problem-solving skills as well as a programming language.},
+	urldate = {2023-10-31},
+	booktitle = {2019 {International} {Conference} on {Advanced} {Science} and {Engineering} ({ICOASE})},
+	author = {Lawan, Abdulmalik Ahmad and Abdi, Abdo Sulaiman and Abuhassan, Anas Ahmad and Khalid, Mohammed Salim},
+	month = apr,
+	year = {2019},
+	pages = {18--22},
+}
+
+@article{dorner_complex_2017,
+	title = {Complex {Problem} {Solving}: {What} {It} {Is} and {What} {It} {Is} {Not}},
+	volume = {8},
+	issn = {1664-1078},
+	shorttitle = {Complex {Problem} {Solving}},
+	url = {https://www.frontiersin.org/articles/10.3389/fpsyg.2017.01153},
+	abstract = {Computer-simulated scenarios have been part of psychological research on problem solving for more than 40 years. The shift in emphasis from simple toy problems to complex, more real-life oriented problems has been accompanied by discussions about the best ways to assess the process of solving complex problems. Psychometric issues such as reliable assessments and addressing correlations with other instruments have been in the foreground of these discussions and have left the content validity of complex problem solving in the background. In this paper, we return the focus to content issues and address the important features that define complex problems.},
+	urldate = {2023-10-31},
+	journal = {Frontiers in Psychology},
+	author = {Dörner, Dietrich and Funke, Joachim},
+	year = {2017},
+}
+
+@misc{ramaswamy_wizard_2022,
+	title = {The {Wizard} of {Oz} {Method} in {UX}},
+	url = {https://www.nngroup.com/articles/wizard-of-oz/},
+	abstract = {The Wizard of Oz is a type of user-research method that involves interaction with a mock interface controlled by a human. It is used to test costly concepts inexpensively and to narrow down the problem space.},
+	language = {en},
+	urldate = {2023-10-30},
+	journal = {Nielsen Norman Group},
+	author = {Ramaswamy, Sara},
+	month = nov,
+	year = {2022},
+}
+
+@article{dow_wizard_2005,
+	title = {Wizard of {Oz} {Support} throughout an {Iterative} {Design} {Process}},
+	volume = {4},
+	issn = {1536-1268},
+	url = {http://ieeexplore.ieee.org/document/1541964/},
+	doi = {10.1109/MPRV.2005.93},
+	language = {en},
+	number = {4},
+	urldate = {2023-10-30},
+	journal = {IEEE Pervasive Computing},
+	author = {Dow, S. and MacIntyre, B. and Lee, J. and Oezbek, C. and Bolter, J.D. and Gandy, M.},
+	month = oct,
+	year = {2005},
+	pages = {18--26},
+}
+
+@misc{noauthor_second-system_2023,
+	title = {Second-system effect},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Second-system_effect&oldid=1181177065},
+	abstract = {The second-system effect or second-system syndrome is the tendency of small, elegant, and successful systems to be succeeded by over-engineered, bloated systems, due to inflated expectations and overconfidence.The phrase was first used by Fred Brooks in his book The Mythical Man-Month, first published in 1975. It described the jump from a set of simple operating systems on the IBM 700/7000 series to OS/360 on the 360 series, which happened in 1964.},
+	language = {en},
+	urldate = {2023-10-30},
+	journal = {Wikipedia},
+	month = oct,
+	year = {2023},
+	note = {Page Version ID: 1181177065},
+}
+
+@misc{noauthor_build_nodate,
+	title = {Build {One} to {Throw} {Away}},
+	url = {https://www.tbray.org/ongoing/When/200x/2008/08/22/Build-One-to-Throw-Away},
+	language = {en},
+	urldate = {2023-10-30},
+	journal = {ongoing by Tim Bray},
+}
+
+@article{gladden_stop_1982,
+	title = {Stop the life-cycle, {I} want to get off},
+	volume = {7},
+	issn = {0163-5948},
+	url = {https://dl.acm.org/doi/10.1145/1005937.1005945},
+	doi = {10.1145/1005937.1005945},
+	number = {2},
+	urldate = {2023-10-30},
+	journal = {ACM SIGSOFT Software Engineering Notes},
+	author = {Gladden, G. R.},
+	month = apr,
+	year = {1982},
+	pages = {35--39},
+}
+
+@article{budde_what_1992,
+	title = {What is prototyping?},
+	volume = {6},
+	issn = {0959-3845},
+	url = {https://doi.org/10.1108/EUM0000000003546},
+	doi = {10.1108/EUM0000000003546},
+	abstract = {Explains and defines prototyping in terms of its character, actors and types. Examines four aspects: its use in the software development process, its goals, horizontal and vertical and the relationship between prototype and application system. Clarifies the distinction between breadboard and prototype.},
+	number = {2/3},
+	urldate = {2023-10-30},
+	journal = {Information Technology \& People},
+	author = {Budde, Reinhard and Kautz, Karlheinz and Kuhlenkamp, Karin and Züllighoven, Heinz},
+	month = jan,
+	year = {1992},
+	note = {Publisher: MCB UP Ltd},
+	keywords = {Management information systems, Prototyping},
+	pages = {89--95},
+}
+
+@article{beck_manifesto_2001,
+	title = {Manifesto for {Agile} {Software} {Development}},
+	author = {Beck, Kent and Beedle, Mike and Van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and {others}},
+	year = {2001},
+	note = {Publisher: Snowbird, UT},
+}
+
+@article{omar_reasonably_2018,
+	title = {Reasonably {Programmable} {Literal} {Notation}},
+	volume = {2},
+	url = {https://dl.acm.org/doi/10.1145/3236801},
+	doi = {10.1145/3236801},
+	abstract = {General-purpose programming languages typically define literal notation for only a small number of common data structures, like lists. This is unsatisfying because there are many other data structures for which literal notation might be useful, e.g. finite maps, regular expressions, HTML elements, SQL queries, syntax trees for various languages and chemical structures. There may also be different implementations of each of these data structures behind a common interface that could all benefit from common literal notation. This paper introduces typed literal macros (TLMs), which allow library providers to define new literal notation of nearly arbitrary design at any specified type or parameterized family of types. Compared to existing approaches, TLMs are uniquely reasonable. TLM clients can reason abstractly, i.e. without examining grammars or generated expansions, about types and binding. The system only needs to convey to clients, via secondary notation, the inferred segmentation of each literal body, which gives the locations and types of spliced subterms. TLM providers can reason modularly about syntactic ambiguity and expansion correctness according to clear criteria. This paper incorporates TLMs into Reason, an emerging alternative front-end for OCaml, and demonstrates, through several non-trivial case studies, how TLMs integrate with the advanced features of OCaml, including pattern matching and the module system. We also discuss optional integration with MetaOCaml, which allows TLM providers to be more confident about type correctness. Finally, we establish these abstract reasoning principles formally with a detailed type-theoretic account of expression and pattern TLMs for “core ML”.},
+	number = {ICFP},
+	urldate = {2023-10-21},
+	journal = {Proceedings of the ACM on Programming Languages},
+	author = {Omar, Cyrus and Aldrich, Jonathan},
+	month = jul,
+	year = {2018},
+	keywords = {hygiene, macro systems, parsing, pattern matching, type systems},
+	pages = {106:1--106:32},
+}
+
+@inproceedings{yang_phase_2008,
+	address = {New York, NY, USA},
+	series = {{ESEM} '08},
+	title = {Phase {Distribution} of {Software} {Development} {Effort}},
+	isbn = {978-1-59593-971-5},
+	url = {https://dl.acm.org/doi/10.1145/1414004.1414016},
+	doi = {10.1145/1414004.1414016},
+	abstract = {Effort distribution by phase or activity is an important but often overlooked aspect compared to other steps in the cost estimation process. Poor effort allocation is among the major root causes of rework due to insufficiently resourced early activities. This paper provides results of an empirical study on phase effort distribution data of 75 industry projects, from the China Software Benchmarking Standard Group (CSBSG) database. The phase effort distribution patterns and variation sources are presented, and analysis results show some consistency in effects of software size and team size on code and test phase distribution variations, and some considerable deviations in requirements, design, and transition phases, compared with recommendations in the COCOMO model. Finally, this paper discusses the major findings and threats to validity and presents general guidelines in directing effort allocation. Empirical findings from this study are beneficial for stimulating discussions and debates to improve cost estimation and benchmarking practices.},
+	urldate = {2023-10-24},
+	booktitle = {Proceedings of the {Second} {ACM}-{IEEE} international symposium on {Empirical} software engineering and measurement},
+	publisher = {Association for Computing Machinery},
+	author = {Yang, Ye and He, Mei and Li, Mingshu and Wang, Qing and Boehm, Barry},
+	month = oct,
+	year = {2008},
+	keywords = {cost estimation, development type, effort allocation, effort distribution, estimation accuracy, phase distribution},
+	pages = {61--69},
+}
+
 @book{seemann_code_2021,
 	edition = {1st},
 	title = {Code {That} {Fits} in {Your} {Head}: {Heuristics} for {Software} {Engineering}},
@@ -313,22 +570,6 @@ ERIC Number: EJ1145017},
 Issue: 2
 Number: 2
 Publication Title: Licentiate thesis},
-}
-
-@article{omar_reasonably_2018,
-	title = {Reasonably programmable literal notation},
-	volume = {2},
-	url = {https://dl.acm.org/doi/10.1145/3236801},
-	doi = {10.1145/3236801},
-	abstract = {General-purpose programming languages typically define literal notation for only a small number of common data structures, like lists. This is unsatisfying because there are many other data structures for which literal notation might be useful, e.g. finite maps, regular expressions, HTML elements, SQL queries, syntax trees for various languages and chemical structures. There may also be different implementations of each of these data structures behind a common interface that could all benefit from common literal notation. This paper introduces typed literal macros (TLMs), which allow library providers to define new literal notation of nearly arbitrary design at any specified type or parameterized family of types. Compared to existing approaches, TLMs are uniquely reasonable. TLM clients can reason abstractly, i.e. without examining grammars or generated expansions, about types and binding. The system only needs to convey to clients, via secondary notation, the inferred segmentation of each literal body, which gives the locations and types of spliced subterms. TLM providers can reason modularly about syntactic ambiguity and expansion correctness according to clear criteria. This paper incorporates TLMs into Reason, an emerging alternative front-end for OCaml, and demonstrates, through several non-trivial case studies, how TLMs integrate with the advanced features of OCaml, including pattern matching and the module system. We also discuss optional integration with MetaOCaml, which allows TLM providers to be more confident about type correctness. Finally, we establish these abstract reasoning principles formally with a detailed type-theoretic account of expression and pattern TLMs for “core ML”.},
-	number = {ICFP},
-	urldate = {2023-10-21},
-	journal = {Proceedings of the ACM on Programming Languages},
-	author = {Omar, Cyrus and Aldrich, Jonathan},
-	month = jul,
-	year = {2018},
-	keywords = {hygiene, macro systems, parsing, pattern matching, type systems},
-	pages = {106:1--106:32},
 }
 
 @inproceedings{omar_active_2012,
@@ -2823,7 +3064,7 @@ the programmer wants it to do. In reality a lot of steps happen until software d
 	pages = {2},
 }
 
-@incollection{wojtkowski_what_2007-1,
+@incollection{wojtkowski_what_2007,
 	address = {Boston, MA},
 	title = {What {Makes} a {Good} {Diagram}? {Improving} the {Cognitive} {Effectiveness} of {Diagrams} in {IS} {Development}},
 	isbn = {978-0-387-70801-0 978-0-387-70802-7},
@@ -6000,7 +6241,7 @@ Conclusion Although the link between perspective type and detection of distress 
 	pages = {756--779},
 }
 
-@book{floyd_software_1992,
+@book{floyd_software_1992-1,
 	address = {Berlin, Heidelberg},
 	title = {Software {Development} and {Reality} {Construction}},
 	isbn = {978-3-642-76819-4 978-3-642-76817-0},
