--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \newcommand{\addref}{\todo[color=red!40]{Add reference.}}
 \newcommand{\estimatedpagecount}[1]{\todo[color=blue!40]{Estimated Pages: #1}}
 \newcommand{\CS}{C\nolinebreak\hspace{-.05em}\raisebox{.6ex}{\scriptsize\bf \#}}
+\newcommand{\textgreek}[1]{\begingroup\fontencoding{LGR}\selectfont#1\endgroup}
 
 %%%-----------------------------------------------------------------------------
 \begin{document}
