wip: finishing introduction chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,29 @@
 
+@incollection{ormerod_human_1990,
+	title = {Human {Cognition} and {Programming}},
+	isbn = {978-0-12-350772-3},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/B9780123507723500094},
+	language = {en},
+	urldate = {2023-11-05},
+	booktitle = {Psychology of {Programming}},
+	publisher = {Elsevier},
+	author = {Ormerod, Tom},
+	year = {1990},
+	note = {https://doi.org/10.1016/B978-0-12-350772-3.50009-4},
+	pages = {63--82},
+}
+
+@book{shaw_memory_2016,
+	address = {London},
+	title = {The {Memory} {Illusion}: {Remembering}, {Forgetting}, and the {Science} of {False} {Memory}},
+	isbn = {978-1-84794-761-1},
+	shorttitle = {The {Memory} {Illusion}},
+	language = {eng},
+	publisher = {rh books},
+	author = {Shaw, Julia},
+	year = {2016},
+}
+
 @misc{funke_complex_2012,
 	address = {Rochester, NY},
 	type = {{SSRN} {Scholarly} {Paper}},
