fix greek letters

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,26 @@
 
+@misc{mourzenko_why_2014,
+	title = {Why {We} {Need} {Throw}-{Away} {Prototyping}?},
+	shorttitle = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?"},
+	url = {https://softwareengineering.stackexchange.com/a/253577},
+	urldate = {2023-10-30},
+	journal = {Software Engineering Stack Exchange},
+	author = {Mourzenko, Arseni},
+	month = aug,
+	year = {2014},
+}
+
+@misc{jones_is_2011,
+	title = {Is {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?},
+	shorttitle = {Answer to "{Is} {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?"},
+	url = {https://cs.stackexchange.com/a/2645},
+	urldate = {2023-11-01},
+	journal = {Computer Science Stack Exchange},
+	author = {Jones, Kyle},
+	month = dec,
+	year = {2011},
+}
+
 @incollection{ormerod_human_1990,
 	title = {Human {Cognition} and {Programming}},
 	isbn = {978-0-12-350772-3},
@@ -36,28 +58,6 @@
 	month = mar,
 	year = {2012},
 	keywords = {complex problem solving, definition, review},
-}
-
-@misc{mourzenko_answer_2014,
-	title = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?"},
-	shorttitle = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?},
-	url = {https://softwareengineering.stackexchange.com/a/253577},
-	urldate = {2023-10-30},
-	journal = {Software Engineering Stack Exchange},
-	author = {Mourzenko, Arseni},
-	month = aug,
-	year = {2014},
-}
-
-@misc{jones_answer_2011,
-	title = {Answer to "{Is} {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?"},
-	shorttitle = {Answer to "{Is} {There} a {Difference} {Between} {Top}-down and {Bottom}-up {Dynamic} {Programming}?},
-	url = {https://cs.stackexchange.com/a/2645},
-	urldate = {2023-11-01},
-	journal = {Computer Science Stack Exchange},
-	author = {Jones, Kyle},
-	month = dec,
-	year = {2011},
 }
 
 @book{simon_administrative_1957,
